removed icons due to spacing issues

--- a/src/components/general/WebsiteHeader/WebsiteHeader.css
+++ b/src/components/general/WebsiteHeader/WebsiteHeader.css
@@ -7,11 +7,3 @@
 .banner {
   background-color: #17314d;
 }
-
-.project-icon {
-  color:lightskyblue
-}
-
-.edu-icon {
-  color:goldenrod
-}
